--- a/frontend-ui/package.json
+++ b/frontend-ui/package.json
@@ -9,11 +9,14 @@
     "@mui/x-data-grid": "^5.0.0",
     "axios": "^1.10.0",
     "chart.js": "^4.0.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.0.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start"
