upload updated code - improve UI and fix telegram register

--- a/telegram-bot/Dockerfile
+++ b/telegram-bot/Dockerfile
@@ -1,30 +1,31 @@
-# telegram-bot/Dockerfile
-FROM python:3.11-slim-buster
+# Use an official Python runtime as a parent image
+FROM python:3.9-slim-buster
 
-WORKDIR /app
+# Set the working directory in the container
+WORKDIR /app/bot
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install system dependencies for psycopg2-binary (if not already present)
+# This helps with potential issues with database drivers
+RUN apt-get update && apt-get install -y \
     libpq-dev \
+    gcc \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements.txt and install Python dependencies from their path relative to project root
-COPY ./telegram-bot/requirements.txt .
+# Copy the shared directory to /app (one level up from /app/bot)
+# This makes it accessible as 'shared' when /app is added to PYTHONPATH
+COPY ./shared /app/shared
+
+# Copy the bot directory into the container
+COPY ./telegram-bot/bot /app/bot
+
+# Install any needed packages specified in requirements.txt
+# Assuming requirements.txt is in the bot directory
+COPY ./telegram-bot/requirements.txt /app/bot/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the bot code (from ./telegram-bot to /app)
-COPY ./telegram-bot .
+# Add /app to PYTHONPATH so Python can find the 'shared' module
+ENV PYTHONPATH=/app:$PYTHONPATH
 
-# Copy the shared directory from the project root
-COPY ./shared ./shared
-
-# --- ADD THIS LINE ---
-ENV PYTHONPATH="/app:${PYTHONPATH}"
-# ---------------------
-
-# Copy wait-for-it.sh from the project root
-COPY wait-for-it.sh /wait-for-it.sh
-RUN chmod +x /wait-for-it.sh
-
-# Command to run the bot, waiting for DB and Kafka
-ENTRYPOINT ["/wait-for-it.sh", "db:5432", "broker:9092", "--", "python", "bot/main.py"]
+# Run main.py when the container launches
+# Use 'python -u' for unbuffered output, which helps with real-time logging in Docker
+CMD ["python", "-u", "main.py"]
