--- a/logic-worker/requirements.txt
+++ b/logic-worker/requirements.txt
@@ -11,3 +11,8 @@ python-dotenv
 sqlalchemy
 openai
 kafka-python
+python-jose>=3.3.0
+matplotlib>=3.5.0 # NEW: For chart generation
+XlsxWriter>=3.0.0 # NEW: For Excel generation
+python-telegram-bot[asyncio]>=20.8
+nest_asyncio
