--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -1,6 +1,5 @@
-# api-server/Dockerfile
-# Use an official Python runtime as a parent image
 FROM python:3.10-bullseye
+# FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
